--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     
         <p id="userBio">
-          An instructor focused on helping pople start programming for web</p>
+          An instructor focused on helping people start programming for web</p>
 
         <ul id="socialLinks">
           <li class="youtube"> 
